Organizando as coisas

--- a/files/supervisor/filebeat.ini
+++ b/files/supervisor/filebeat.ini
@@ -1,6 +1,6 @@
 [program:filebeat]
 user = root
 autostart = true
-command = /opt/filebeat/filebeat -e -c /opt/filebeat/filebeat.yml
+command = /opt/monitor/filebeat/filebeat -e -c /opt/filebeat/monitor/filebeat.yml
 stdout_logfile = /var/log/monitor/filebeat-common.log
 stderr_logfile = /var/log/monitor/filebeat-error.log
