--- a/files/beats/filebeat.yml
+++ b/files/beats/filebeat.yml
@@ -1,5 +1,4 @@
-name: $hostname
+name: ${hostname}
 output.logstash:
   enabled: true
-  hosts: [$logstash_host]
-logging.to_files: false
+  hosts: ${logstash_host}
