--- a/files/beats/packetbeat.yml
+++ b/files/beats/packetbeat.yml
@@ -1,4 +1,4 @@
-name: $hostname
+name: ${hostname}
 
 packetbeat.interfaces.device: any
 
@@ -45,6 +45,5 @@ packetbeat.protocols.nfs:
   ports: [2049]
 
 output.logstash:
-  hosts: [$logstash_host]
-
-logging.to_files: false
+  enabled: true
+  hosts: ${logstash_host}
